--- a/sass/_elements.sass
+++ b/sass/_elements.sass
@@ -5,7 +5,7 @@
     border: none
     outline: none
 
-@import url('https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500;600;700;800;900&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&display=swap')
 
 $black: #1b1b1b
 $black_upper: #374246
@@ -17,14 +17,13 @@ body
     display: flex
     flex-direction: column
     background-color: #131313
-    font-family: 'Jost', sans-serif
+    font-family: 'Montserrat', sans-serif
     &.active
         overflow: hidden
 
 .container
     width: 100%
-    max-width: 1200px
-    padding: 0 15px
+    max-width: 1585px
     margin: 0 auto
     position: relative
     z-index: 1
@@ -58,7 +57,7 @@ button
     transition: all ease .3s
     background-color: transparent
     &:active
-        transform: scale(.98)
+        transform: scale(.99)
 
     &:hover
         opacity: .8
@@ -71,27 +70,43 @@ section
     max-width: 230px
 
 .btn
-    font-weight: 500
-    font-size: 16px
-    line-height: 20px
+    font-weight: 700
+    font-size: 20px
+    line-height: 24px
+    text-transform: uppercase
+    color: #FFFFFF
     display: inline-block
-    text-align: center
-    color: #fff
-    padding: 15px 20px
-    background-color: $yelow
-    border-radius: 6px
-    min-width: 200px
-    box-shadow: 0 0 20px -5px #003fd4
-    span
+    background-color: #00CCCC
+    border-radius: 100px
+    padding: 38px 73px 36px
+    box-shadow: 0 0 20px -5px #00CCCC
+    position: relative
+    z-index: 1
+    margin: 6px
+    img 
+        position: absolute
+        top: -12px
+        right: -10px
+        max-height: 150px
+        max-width: 150px
+    
+    &::before
+        content: ''
         display: block
-        opacity: .5
-
+        height: calc( 100% + 12px )
+        width: calc( 100% + 12px )
+        border: 1px solid #00CCCC
+        border-radius: 100px
+        position: absolute
+        top: -7px
+        left: -7px
+        z-index: -1
+    
     &-menu
         display: none
 
     &:hover
         opacity: 1
-        box-shadow: 0 4px 40px 0px rgba(#003fd4, .8)
 
     &:active
         opacity: 1
@@ -104,26 +119,19 @@ section
         animation: none
         box-shadow: none
 
-    &-link
-        padding-right: 28px
-        background-image: url('../img/arrow_next.svg')
-        background-repeat: no-repeat
-        background-position: right center
-        background-size: 24px 24px
-        &:hover
-            color: $yelow
-            opacity: 1
-
-    &-second
-        box-shadow: none
+    &-2
+        font-size: 14px
+        line-height: 19px
+        padding: 28px 38px
+        margin: 0
+        border: 2px solid #fff
         background-color: transparent
-        color: #fff
-        border: 1px solid #fff
-        &:hover
-            opacity: 1
-            box-shadow: none
-            background-color: $yelow
-            border-color: $yelow
+        box-shadow: none
+        &::before
+            display: none
+
+    &-img 
+        padding-right: 100px
 
 .wrapper, .slider, .wrap, .wrap-strech, .wrap-start, .box-wrap
     display: flex
@@ -150,6 +158,7 @@ ol
     font-weight: 400
     font-size: 20px
     line-height: 26px
+
 input,
 textarea,
 select
@@ -187,135 +196,6 @@ select
     position: relative
     z-index: 1
     margin: 0
-
-.inp
-    margin: 0 0 10px 0
-    width: 100%
-    max-width: 49%
-    label
-        display: block
-
-    .heading
-        display: block
-        padding-top: 4px
-        font-weight: 400
-        font-size: 16px
-        line-height: 120%
-
-    .descr
-        font-weight: 400
-        font-size: 16px
-        line-height: 22px
-        opacity: .7
-
-    &-wrap
-        margin-bottom: 20px
-        label
-            font-weight: 400
-            font-size: 16px
-            line-height: 120%
-            margin-bottom: 5px
-            color: $black
-            opacity: .7
-
-        input
-            margin: 0
-
-        .wrap
-            display: flex
-            flex-wrap: nowrap
-            justify-content: space-between
-            label
-                display: block
-                width: 100%
-            input
-                width: 70%
-                // border-right: none 
-                border-radius: 6px 0px 0px 6px
-
-            select
-                font-size: 16px
-                padding: 0 15px
-                height: 50px
-                margin: 0
-                width: 30%
-                min-width: 87px
-                border-left: 0
-                border-radius: 0 6px 6px 0
-
-        &.err
-            label
-                color: red !important
-            input, select
-                border-color: rgba(red, .4)
-                animation: shadowErr 2s ease 
-
-    &-count
-        display: flex
-        justify-content: space-between
-        align-items: center
-        background: #F3F4F4
-        border-radius: 6px
-        padding: 20px 16px
-
-    &-checkbox,
-    &-radio
-        position: relative
-        padding-left: 32px
-
-        label
-            margin: 0
-            &::before,
-            &::after
-                content: ''
-                display: inline-block
-                width: 20px
-                height: 20px
-                border: 2px solid $black
-                border-radius: 6px
-                position: absolute
-                top: 3px
-                left: 0
-                background-repeat: no-repeat
-                background-position: center center
-                background-size: 70%
-            &::after
-                transform-origin: 50% 50%
-                border-radius: 50%
-                border-color: transparent
-
-        input
-            width: 24px
-            height: 24px
-            opacity: 0
-            margin: 0
-            position: absolute
-            top: 0
-            left: 0
-            &:checked ~ label::before
-                border-color: green
-                // background-color: $yelow
-                background-image: url('../img/check.svg')
-
-    &-radio
-        label
-            &::before
-                border-radius: 50%
-
-        input
-            &:checked ~ label
-                &::before
-                    border-color: $yelow
-                    background-image: none
-                &::after
-                    background-color: $yelow
-                    transform: scale(.5)
-
-@keyframes shadowErr
-    0%
-        box-shadow: 0 0 20px 0 rgba(red, .4)
-    100%
-        box-shadow: none
 
 .heading
     font-weight: 600
@@ -363,103 +243,16 @@ ul
             border-radius: 50%
             background-color: #fff
 
-    &.dont,
-    &.do
-        strong
-            font-size: 22px
-            display: block
-            margin-bottom: 6px
-
-        li
-            font-size: 17px
-            padding-left: 50px
-            color: rgba(255, 255, 255, .8)
-            background-image: url('../img/wrong.svg')
-            background-repeat: no-repeat
-            background-size: 34px 34px
-            background-position: left top 5px
-            &::before
-                display: none
-    &.do
-        li
-            background-image: url('../img/check.svg')
-            background-size: 38px 38px
-
-table
-    width: 100%
-    thead
-        border-bottom: 1px solid #000
-        tr
-            background-color: #fff !important
-    td, th
-        padding: 10px
-        font-size: 14px
-
-    th
-        font-weight: 500
-        &:first-of-type
-            min-width: 100px
-
-    td
-        &:last-of-type,
-        &:nth-of-type(1)
-            white-space: nowrap
-
-    tr
-        &:nth-of-type(odd)
-            background-color: rgba(0, 0, 0, .1)
-
-        &.total
-            // background-color: rgba($yelow, .1)
-
-        &.head
-            border-top: 2px solid #000
-            border-bottom: 1px solid #000
-            background-color: #fff
-
-    tfoot
-        td
-            font-size: 16px
-            font-weight: bold
-            padding: 16px 10px
-            background-color: rgba($yelow, .1)
-
-            &:last-of-type,
-            &:nth-of-type(2)
-                white-space: nowrap
-
-    &.even
-        thead
-        tr
-            &:nth-of-type(odd)
-                background-color: #fff
-
-            &:nth-of-type(even)
-                background-color: rgba(0, 0, 0, .1)
-
 hr
     background-color: rgba(255, 255, 255, .3)
     height: 1px
     margin: 20px 0 20px
 
-.phone
-    font-size: 18px
-    font-weight: 500
-    text-align: right
-    margin-right: 30px
-    i
-        width: 100%
-        font-size: 14px
-        font-weight: 300
-        display: block
+@media screen and ( max-width: 1600px )
+    .container 
+        max-width: 1200px
+        padding: 0 15px
 
-#cVolume
-    background-image: url('../img/sm3.jpg')
-    background-repeat: no-repeat
-    background-position: center right 10px
-    background-size: 34px auto
-
-@media screen and ( max-width: 1500px )
     .headline
         font-size: 42px
 
@@ -478,7 +271,7 @@ hr
 
     .logo
         max-width: 200px
-    
+
     .btn
         min-width: 180px
         &-menu
@@ -544,13 +337,6 @@ hr
                         background-color: #fff
                     &::after
                         background-color: transparent
-
-    ul
-        &.dont,
-        &.do
-            li
-                padding-left: 35px
-                background-size: 26px 26px
 
 @media screen and ( max-width: 700px )
 
