--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6,668 +6,102 @@
 @import 'modal'
 
 .main
-    overflow: hidden
+    background-image: url('../img/scroll.svg'), url('../img/main.jpg')
+    background-repeat: no-repeat
+    background-position: right 40px bottom 50px, center center
+    background-size: 54px 155px, cover
     position: relative
-    z-index: unset
-    &::before
-        content: ''
-        display: block
-        width: 100%
-        height: 1px
-        position: absolute
-        z-index: -1
-        top: 0
-        left: 0
-        background-color: $black
-        box-shadow: 0px 0px 80px 70px $black
-
     .container
-        height: 100vh
         display: flex
         flex-direction: column
-        min-height: 700px
-        max-height: 890px
-        max-width: 1600px
-        padding-bottom: 100px
+        min-height: 600px
+        height: 100vh
+        max-height: 1080px
 
-    &__img
+    &-fixed
         position: absolute
-        top: 0
-        width: 75%
-        object-fit: cover
-        left: 35%
-        max-width: 100%
-        height: 100%
-        z-index: -100
-        opacity: .7
-        // border-radius: 0 0 0 60px
-
-    .headline
-        font-weight: 800
-        max-width: 600px
-        position: relative
-        z-index: 1
-        margin-bottom: 30px
-        &::before
-            content: ''
+        top: 40%
+        right: 0
+        &__btn
+            padding: 20px 25px
             display: block
-            width: 60px
-            height: 100%
-            position: absolute
-            top: 0
-            left: -40px
-            z-index: -1
-            background-color: $yelow
+            width: 100%
+            background-color: #161D25
+            border: 1px solid #00CCCC
+            border-right: none
+            border-radius: 20px 0 0 20px
+            font-weight: 300
+            font-size: 8px
+            line-height: 10px
+            margin-bottom: 9px
+            text-align: center
+            &:hover
+                opacity: 1
+                box-shadow: 0 0 20px -5px #00CCCC
 
-    .textline
-        max-width: 600px
-        font-weight: 500
+            img
+                display: block
+                margin: 0 auto 5px
+            b
+                font-size: 12px
+                line-height: 15px
+                display: block
 
-    &-title
+    &-content
         margin: auto 0
-        max-width: 47%
-        position: relative
-        z-index: 1000
-        padding-left: 100px
 
-    .btn
-        &-second
-            margin: 0 10px 10px 0
+    h1
+        max-width: 80%
+        font-weight: 400
+        font-size: 54px
+        line-height: 68px
+        text-transform: uppercase
+        margin: 0 0 70px
 
-.calculation
-    position: relative
-    z-index: 1000
-    padding: 0 0 80px
-
-    &::before
-        // content: ''
-        display: block
-        width: 200px
-        height: 200px
-        position: absolute
-        top: 0
-        left: 5%
-        background-image: url('../img/calculator.svg')
-        background-repeat: no-repeat
-        background-position: center center
-        opacity: .3
-        transform: rotate(-25deg)
-
-    .container
-        max-width: 1300px
-        position: absolute
-        left: 50%
-        transform: translateX(-50%)
-        z-index: 999999
-        padding: 30px 70px 35px
-        border-radius: 8px
-        top: -60px
-
-        background: rgb(39,25,255)
-        background: linear-gradient(153deg, rgba(39,25,255,1) 0%, rgba(9,9,121,1) 45%, rgba(0,212,255,1) 100%)
-
-    .headline
-        margin: 0
-        max-width: 54%
-
-    .btn
-        transform-origin: 100% 50%
-        transform: scale(1.5)
-
-.info
-    text-align: center
-
-    &.bg
-        background-color: rgba(white, .08)
-
-    .headline
-        text-align: center
-        margin-bottom: 20px
-
-    .textline
-        max-width: 800px
-        margin: 0 auto 20px
-
-    &__text
-        font-size: 26px
-        line-height: 130%
-        font-weight: 300
-
-    &-title
-        width: 46%
-        text-align: left
-        .headline
-            text-align: left
-
-    &__img
-        width: 48%
-
-.stages
-    &.bg
-        background-color: rgba(white, .1)
-
-    .wrap
-        justify-content: flex-start
-        align-items: stretch
+    .wrap-start
+        max-width: 1060px
+        margin-bottom: 100px
 
     &-item
-        width: 32.5%
-        min-height: 100px
-        text-align: left
-        border: 1px solid rgba(white, .2)
-        margin-bottom: 10px
         display: flex
         align-items: center
-        transition: all ease .3s
-        &:nth-of-type(3n+2)
-            margin: 0 10px 10px
-
-        &:hover
-            transform: scale(1.01)
-
-        .num
-            transition: all ease .3s
-            text-align: center
-            font-weight: 600
-            font-size: 45px
-            min-width: 68px
-            border:
-                right: 1px solid rgba(white, .1)
-
-        .text
-            font-weight: 300
-            font-size: 17px
-            line-height: 130%
-            padding: 10px 10px 10px 20px
-
-        a
-            text-decoration: underline
-            color: rgba(#645eff, 1)
-
-.why
-    padding: 100px 0
-    background: rgb(39,25,255)
-    background: linear-gradient(153deg, rgba(39,25,255,1) 0%, rgba(9,9,121,0.8687850140056023) 45%, rgba(0,212,255,0.7875525210084033) 100%)
-    .headline
-        margin-bottom: 10px
-
-    .wrap
-        align-items: stretch
-        margin-top: 80px
-
-    &-item
-        display: flex
-        width: 48%
-        margin: 0 0 30px
-        img
-            margin-right: 10px
-            width: 40px
-            height: 40px
-            object-fit: contain
-
-    &__heading
-        font-size: 20px
-        margin: 0 0 5px
+        max-width: 31%
         font-weight: 500
-
-    &__text
-        margin: 0
-        font-weight: 300
         font-size: 18px
-
-    &-box
-        width: 24%
-        min-height: 190px
-        border: 1px solid rgba(white, .5)
-        padding: 20px
-        margin-bottom: 20px
-        transition: all ease .3s
-        &:nth-of-type(5),
-        &:nth-of-type(6),
-        &:nth-of-type(7)
-            width: 32.5%
-        &:hover
-            transform: translateY(-5px)
-            background-color: rgba(0, 0, 0, .2)
-
+        line-height: 24px
+        text-transform: uppercase
+        margin: 0 0 20px
         img
-            width: 60px
-            height: 60px
-            object-fit: contain
-            object-position: center center
-            margin-bottom: 5px
+            margin: 0 25px 0 0
 
-        p
-            font-weight: 300
-            font-size: 16px
-            line-height: 125%
-
-    a
-        text-decoration: underline
-        color: #0095ff
-
-.credit
-    width: 45%
-    display: block
-    border-radius: 20px
-    padding: 50px
-    background-color: #fff
-    img
-        width: 100%
-        display: block
-        margin-bottom: 30px
-        text-align: left
-    .btn
-        display: block
-        width: 100%
-
-.download
-    padding: 80px 0
-    position: relative
-    z-index: 1
-
-    &-title
-        max-width: 53%
-
-    .headline
-        // font-size: 65px
-        margin-bottom: 30px
-
-    .textline
-        font-weight: 400
-
-    &::before
-        content: ''
-        display: block
-        width: 100%
-        height: 100%
+    &__man
         position: absolute
-        top: 0
-        left: 0
-        z-index: -1
-        background-image: url('../img/car-3.jpg')
-        background-repeat: no-repeat
-        background-position: center center
-        background-attachment: fixed
-        background-size: cover
-        opacity: .5
-
-    form
-        max-width: 44%
-        border-radius: 10px
-        width: 400px
-        padding: 40px
-        background-color: #fff
-        .btn
-            display: block
-            width: 100%
-            margin-top: 30px
-
-    &.model
-        &::before
-            opacity: .3
-            background-image: url('../img/car-4.jpg')
-
-.payment
-
-    .headline
-        margin-bottom: 80px
-
-    &-item
-        width: 32%
-        padding: 20px 20px
-        margin-bottom: 30px
-        border-left: 1px solid rgba(white, .5)
-        transition: all ease .3s
-        &:hover
-            transform: translateY(-10px)
-
-        .num
-            font-size: 80px
-            font-weight: 900
-            display: block
-            padding-bottom: 20px
-            margin-bottom: 60px
-            border-bottom: 1px solid rgba(white, .2)
-
-        .text
-            font-size: 24px
-            font-weight: 300
-            line-height: 130%
-
-.team
-    &-item
-        width: 24%
-        border: 1px solid rgba(white, .3)
-        padding: 30px 30px 40px
-        text-align: center
-        margin-bottom: 30px
-        position: relative
-        overflow: hidden
-        img
-            width: 150px
-            height: 150px
-            border: 1px solid rgba(white, .3)
-            margin-bottom: 10px
-            border-radius: 50%
-            object-fit: cover
-            object-position: center center
-
-        &::before
-            content: ''
-            display: block
-            width: 100%
-            height: 100%
-            position: absolute
-            top: 0
-            left: 0
-            z-index: -1
-
-    &__heading
-        font-weight: 600
-        font-size: 24px
-        margin-bottom: 5px
-
-    &__phone
-        font-size: 18px
-        opacity: 1
-        font-weight: 300
-        background-image: url('../img/phone.svg')
-        background-repeat: no-repeat
-        background-position: left center
-        padding-left: 25px
-        background-size: 20px 20px
-        color: rgba(white, .8)
-
-.ready
-    padding: 100px 0
-    .wrap
-        align-items: stretch
-
-    &-item
-        width: 31%
-        padding-bottom: 80px
-        margin-bottom: 30px
-        position: relative
-        z-index: 1
-        &:nth-of-type(even)
-            padding: 20px 20px 90px
-            background-color: rgba(white, .1)
-            .btn
-                bottom: 20px
-                left: 20px
-                width: calc( 100% - 40px )
-
-    &__heading
-        font-weight: 600
-        font-size: 20px
-        margin-bottom: 10px
-    &__text
-        font-size: 18px
-        font-weight: 300
-        margin-bottom: 20px
-
-    .btn
-        position: absolute
+        z-index: 1000
         bottom: 0
-        left: 0
-        width: 100%
         display: block
+        right: 10%
+        pointer-events: none
 
-@media screen and ( max-width: 1500px )
-    .main
-        &-title
-            max-width: 48%
-            width: 48%
-
-    .calculation
-        .container
-            max-width: 1100px
-
-@media screen and ( max-width: 1200px )
-    .main
-        .container
-            min-height: 500px
-            height: unset
-
-        &__img
-            object-position: center left
-
-        &-title
-            padding: 80px 0 40px 40px
-            max-width: 560px
-            width: 100%
-
-    .calculation
-        padding: 0 15px 0
-        .container
-            text-align: center
-            display: block
-            width: 700px
-            padding: 40px 20px
-            max-width: 96%
-            transform: none
-            left: 0
-            position: relative
-
-        .headline
-            text-align: center
-            width: 100%
-            font-size: 30px
-            margin: 0 auto 20px
-
-        .btn
-            transform: none
-
-    .info
-        &.md-pt
-            padding-top: 10px
-
-        &__text
-            font-size: 20px
-
-        &-title
-            width: 50%
-            max-width: 48%
-
-    .credit
-
-    .stages
-        .wrap
-            justify-content: space-between
-        &-item
-            width: 49%
-            margin: 0 0 2% !important
-
-    .why
-        .wrap
-            margin-top: 60px
-        &-box
-            min-height: unset
-            p
-                font-size: 16px
-
-    .download
-
-    .payment
-        .wrap
-            align-items: stretch
-        &-item
-            .num
-                font-size: 60px
-                font-weight: 900
-                display: block
-                padding-bottom: 10px
-                margin-bottom: 40px
-            .text
-                font-size: 18px
-
-    .team
-        .wrap
-            justify-content: center
-        &-item
-            margin: 0 10px 20px
-            max-width: 350px
-            width: 48%
-
-    .ready
-        &-item
-            width: 48%
-            margin-bottom: 40px
-
-@media screen and ( max-width: 800px )
-    .main
-        .container
-            position: static
-            z-index: unset
-
-        &__img
-            width: 100%
-            max-width: 100%
-            top: 0
-            left: 0
-
-        .headline
-            text-shadow: 0 0 8px rgba(0, 0, 0, 1)
-
-        .textline
-            text-shadow: 0 0 8px rgba(0, 0, 0, 1)
-
-@media screen and ( max-width: 700px )
-    .main
-        &-title
-            padding: 35px 0 25px 10px
-            padding-left: 10px
-
-        .headline
-            margin-bottom: 15px
-            &::before
-                left: -10px
-                width: 40px
-                height: 110%
-                top: -5%
-
-    .calculation
-        padding: 0 15px 0
-        .container
-            width: 400px
-            max-width: 92%
-            padding: 30px 20px
-
-        .headline
-            font-size: 22px
-            max-width: 100%
-
-    .info
-        &__img
-            width: 100%
-            max-width: 100%
-            margin-bottom: 40px
-
-        .wrap
-            display: block
-
-        &-title
-            max-width: 100%
-            width: 100%
-            margin-bottom: 40px
-            &:last-of-type
-                margin-bottom: 0
-
-    .stages
-        .wrap
-            display: block
-            width: 100%
-        &-item
-            width: 100%
-            margin: 0 0 15px !important
-
-    .credit
-        width: 100%
-        padding: 40px 30px
-        max-width: 100%
-        margin-bottom: 40px
+    .btn-play
+        position: absolute
+        z-index: 1
+        bottom: 30%
+        right: 25%
+        border-radius: 50%
+        width: 177px
+        height: 177px
+        border: 4px solid #00CCCC
+        background-image: url('../img/play.svg')
+        background-repeat: no-repeat
+        background-position: left 55% center
+        background-size: 30%
+        &:hover
+            opacity: 1
+            background-color: rgba(#00CCCC, .3)
+            
         img
-            margin-bottom: 20px
-            max-width: 90%
-            margin: 0 auto 20px
-
-    .why
-        &-item
-            width: 100%
-            max-width: 100%
-
-        .wrap
-            margin-top: 40px
-
-        &-box
-            width: 49%
-            margin-bottom: 2%
-            p
-                font-size: 14px
-
-            &:nth-of-type(5),
-            &:nth-of-type(6)
-                width: 49%
-            &:nth-of-type(7)
-                width: 100%
-
-    .download
-        .wrap
-
-        .headline
-            text-align: center
-            margin-bottom: 10px
-        .textline
-            text-align: center
-        &-title
-            width: 100%
-            order: 1
-            max-width: 100%
-
-        form
-            order: 2
-            width: 100%
-            max-width: 500px
-            margin: 0 auto
-
-    .payment
-        padding: 80px 0
-        .headline
-            margin-bottom: 40px
-
-        .wrap
-            display: block
-        &-item
-            width: 100%
-            margin-bottom: 40px
-            padding-bottom: 40px
-            border-bottom: 1px solid rgba(white, .5)
-
-    .team
-        .wrap
-            width: calc( 100% + 30px )
-            position: relative
-            left: -15px
-            overflow-x: scroll
-            justify-content: flex-start
-            flex-wrap: nowrap
-            padding-left: 15px
-            -ms-overflow-style: none
-            scrollbar-width: none
-            &::-webkit-scrollbar
-                display: none
-                width: 0
-                height: 0
-
-        &-item
-            display: inline-block
-            margin: 0 10px 0 0
-            min-width: 250px
+            position: absolute
+            top: -40%
+            right: -20%
             width: 250px
-
-    .ready
-        &-item
-            width: 100%
-            max-width: 500px
-            margin-bottom: 40px
+            max-width: unset 
