--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -5,11 +5,11 @@
     align-items: center
 
 .header
-    padding: 60px 0 0
+    padding: 40px 0 0
 
     .nav
         &-link
-            font-weight: 600
+            font-weight: 500
             font-size: 16px
             line-height: 20px
             text-transform: uppercase
@@ -49,3 +49,20 @@
             line-height: 21px
 
     @media screen and ( max-width: 1600px )
+        padding: 20px 0 0
+        .logo
+            max-width: 120px
+
+        &__wa
+            width: 38px
+            height: 38px
+
+        &-phone
+            strong
+                font-size: 14px
+                line-height: 21px
+
+        .nav
+            &-link
+                font-size: 15px
+                padding: 20px 10px
