--- a/sass/style.sass
+++ b/sass/style.sass
@@ -14,13 +14,13 @@
     .container
         display: flex
         flex-direction: column
-        min-height: 600px
+        min-height: 650px
         height: 100vh
         max-height: 1080px
 
     &-fixed
         position: absolute
-        top: 40%
+        top: 35%
         right: 0
         &__btn
             padding: 20px 25px
@@ -59,18 +59,18 @@
         margin: 0 0 70px
 
     .wrap-start
-        max-width: 1060px
         margin-bottom: 100px
+        justify-content: flex-start
 
     &-item
-        display: flex
+        display: inline-flex
         align-items: center
         max-width: 31%
         font-weight: 500
         font-size: 18px
         line-height: 24px
         text-transform: uppercase
-        margin: 0 0 20px
+        margin: 0 70px 20px 0
         img
             margin: 0 25px 0 0
 
@@ -79,14 +79,15 @@
         z-index: 1000
         bottom: 0
         display: block
+        max-height: 60%
         right: 10%
         pointer-events: none
 
     .btn-play
         position: absolute
         z-index: 1
-        bottom: 30%
-        right: 25%
+        bottom: 26%
+        right: 24%
         border-radius: 50%
         width: 177px
         height: 177px
@@ -98,10 +99,47 @@
         &:hover
             opacity: 1
             background-color: rgba(#00CCCC, .3)
-            
+
         img
             position: absolute
             top: -40%
             right: -20%
             width: 250px
-            max-width: unset 
+            max-width: unset
+
+@media screen and ( max-width: 1600px )
+
+    .main
+        h1
+            font-size: 38px
+            max-width: 70%
+            line-height: 135%
+            margin-bottom: 40px
+
+        .wrap
+            &-start
+                margin-bottom: 70px
+                max-width: 80%
+                justify-content: flex-start
+
+        &-item
+            max-width: 32%
+            font-size: 14px
+            line-height: 150%
+            margin-right: 30px
+            img 
+                max-width: 60px
+                max-width: 60px
+                margin-right: 15px
+
+        &__man
+            max-height: 55%
+
+        .btn-play
+            width: 120px
+            height: 120px
+            border-width: 2px
+            bottom: 26%
+            right: 23%
+            img
+                width: 200px
