--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -7,6 +7,9 @@
 .header
     padding: 40px 0 0
 
+    .logo 
+        max-width: 140px
+
     .nav
         &-link
             font-weight: 500
@@ -26,8 +29,6 @@
         background-repeat: no-repeat
         background-position: center center
         margin: 0 10px 0 0
-
-    &__call
 
     &-phone
         display: flex
