--- a/sass/_elements.sass
+++ b/sass/_elements.sass
@@ -207,9 +207,11 @@ select
     margin: 0
 
 .heading
-    font-weight: 600
-    font-size: 20px
-    line-height: 22px
+    font-weight: 900
+    font-size: 64px
+    line-height: 78px
+    margin-bottom: 120px
+    text-transform: uppercase
 
 .text
     font-style: normal
@@ -229,8 +231,7 @@ textarea
     padding-top: 18px
 
 strong,b
-    font-weight: 700
-    color: #fff
+    font-weight: 800
 
 ul
     list-style-type: none
@@ -262,10 +263,10 @@ hr
         max-width: 1200px
 
     .headline
-        font-size: 42px
+        font-size: 30px
 
     .textline
-        font-size: 22px
+        font-size: 18px
 
     .btn
         padding: 25px 50px 24px
