--- a/sass/style.sass
+++ b/sass/style.sass
@@ -210,6 +210,7 @@
     background-color: #161D25
     &-item
         width: 270px
+        max-width: 18%
         aspect-ratio: 1/1
         display: inline-flex
         align-items: center
