--- a/sass/_elements.sass
+++ b/sass/_elements.sass
@@ -72,12 +72,13 @@ section
     font-size: 20px
     line-height: 24px
     text-transform: uppercase
+    text-align: center
     color: #FFFFFF
     display: inline-block
     background-color: #00CCCC
     border-radius: 100px
     padding: 31px 65px 30px
-    box-shadow: 0 0 20px -5px #00CCCC
+    box-shadow: 0 0 20px 0px #00CCCC
     position: relative
     z-index: 1
     margin: 6px
@@ -281,6 +282,13 @@ hr
             padding-right: 90px
 
 @media screen and ( max-width: 1200px )
+    .container
+        padding: 0 15px
+
+    .heading
+        font-size: 44px
+        line-height: 130%
+
     .headline
         font-size: 38px
 
@@ -294,13 +302,12 @@ hr
         max-width: 200px
 
     .btn
-        min-width: 180px
         &-menu
             display: inline-block
             vertical-align: middle
-            width: 24px
-            height: 24px
-            margin: 0
+            width: 50px
+            height: 28px
+            margin: 0 0 17px
             background-color: transparent
             transition: all ease .3s
             position: relative
@@ -315,69 +322,80 @@ hr
                 height: 3px
                 transition: all ease .3s
                 border-radius: 2px
-                background-color: #fff
+                background-color: #00CCCC
                 &::before,
                 &::after
                     content: ''
                     display: block
                     width: 100%
                     height: 3px
-                    background-color: #fff
+                    background-color: #00CCCC
                     position: absolute
-                    top: 9px
+                    top: 11px
                     left: 0
                     transition: all ease .3s
                     border-radius: 2px
                 &::after
-                    top: -9px
+                    top: -11px
 
             &::before
                 content: ''
                 display: block
                 width: 180%
-                height: 180%
+                height: 324%
                 position: absolute
                 transform: translate(-50%, -50%)
                 top: 43%
                 left: 50%
                 border-radius: 50%
 
+            &::after
+                content: 'меню'
+                position: absolute
+                top: 100%
+                right: 0
+                text-align: center
+                font-size: 14px
+                line-height: 17px
+                z-index: -1111
+                display: block
+                width: 100%
+
             &.active
                 transform: scale(.6)
                 &::before
                     background-color: rgba(#fff, .2)
+                &::after
+                    opacity: 0
                 span
                     top: 50%
                     left: 50%
                     transform: translate(-50%, -50%) rotate(-45deg)
-                    background-color: #fff
                     &::before
                         top: 50%
                         left: 50%
                         transform: translate(-50%, -50%) rotate(-90deg)
-                        background-color: #fff
                     &::after
                         background-color: transparent
+
+        &-2
+            font-size: 12px
+            padding: 14px 20px 12px
 
 @media screen and ( max-width: 700px )
 
     .headline
-        font-size: 28px
-        margin-bottom: 40px
+        font-size: 24px
+        line-height: 29px
 
     .textline
-        font-size: 18px
+        font-size: 12px
+        line-height: 15px
 
     select
         font-size: 16px
 
-    .inp-wrap
-        label
-            font-size: 15px
-
-    table
-        td, th
-            font-size: 12px
-        tfoot
-            td
-                font-size: 13px
+    .btn
+        font-size: 15px
+        line-height: 18px
+        padding: 18px 50px 16px
