--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2,11 +2,13 @@
 @import 'elements'
 @import 'header'
 @import 'footer'
+@import 'anim'
 // @import 'slick'
 @import 'modal'
 
 .main
-    background-image: url('../img/scroll.svg'), url('../img/main.jpg')
+    overflow: hidden
+    background-image: url('../img/scroll.svg'), url('../img/maket-fona.png')
     background-repeat: no-repeat
     background-position: right 40px bottom 50px, center center
     background-size: 54px 155px, cover
@@ -17,6 +19,7 @@
         min-height: 700px
         height: 100vh
         max-height: 1080px
+        z-index: unset
 
     &-fixed
         position: absolute
@@ -49,7 +52,8 @@
 
     &-content
         margin: auto 0
-        padding: 0 0 20px
+        padding: 0 0 80px
+        z-index: 9999
 
     h1
         max-width: 80%
@@ -58,6 +62,8 @@
         line-height: 68px
         text-transform: uppercase
         margin: 0 0 70px
+        position: relative
+        z-index: 100000
 
     .wrap-start
         margin-bottom: 100px
@@ -77,7 +83,7 @@
 
     &__man
         position: absolute
-        z-index: 1000
+        z-index: 100000
         bottom: 0
         display: block
         max-height: 60%
@@ -86,7 +92,7 @@
 
     .btn-play
         position: absolute
-        z-index: 1
+        z-index: 10000
         bottom: 26%
         right: 24%
         border-radius: 50%
@@ -136,6 +142,7 @@
 
     &-item
         width: 370px
+        max-width: 100%
         display: inline-block
         text-align: center
         img
@@ -152,6 +159,7 @@
 
         &__img
             width: 300px
+            max-width: 80%
             position: relative
             z-index: 1
             margin: 30px 30px 90px
@@ -190,10 +198,14 @@
     background-position: top 0px right 80px
     .container
         padding: 150px 0 230px
-        background-image: url('../img/scheme.jpg')
-        background-repeat: no-repeat
-        background-position: bottom 30% right
-        background-size: 64% auto
+
+    &__img
+        position: absolute
+        bottom: 13%
+        right: 0
+        max-width: 63%
+        z-index: -1
+
     .heading
         font-weight: 400
     p
@@ -276,3 +288,132 @@
 
             .btn
                 right: -10%
+
+@media screen and ( max-width: 1200px )
+    .main
+        .container
+            display: block
+            min-height: 880px
+
+        &-content
+            padding: 100px 0 0
+            .btn
+                position: absolute
+                bottom: 40px
+                left: 50%
+                transform: translateX(-50%)
+                z-index: 100000
+                padding-right: 80px
+                max-width: 350px
+        h1
+            max-width: 100%
+            text-align: center
+
+        .btn
+            &-play
+                right: 45%
+
+        .wrap-start
+            display: none
+
+    .business
+        background-size: 1920px auto, 800px auto
+
+        .wrap
+            justify-content: space-around
+
+        &-item
+            margin-bottom: 40px
+            &:last-child
+                margin-bottom: 0
+
+    .scheme
+        background-image: none
+        overflow: hidden
+        .heading
+            margin-bottom: 50px
+
+        .container
+            padding: 60px 15px
+            max-width: 700px
+
+        .btn
+            margin-top: 200px
+
+        &__img
+            top: 63%
+            left: 0
+            right: auto
+            max-width: unset
+            width: 550px
+            height: 650px
+            object-fit: contain
+            object-position: top left
+
+        p
+            margin-bottom: 30px
+
+    .partners
+        .wrap
+            justify-content: space-evenly
+        &-item
+            max-width: unset
+            margin-bottom: 50px
+
+@media screen and ( max-width: 700px )
+    .main
+        .container
+            max-height: unset
+            min-height: 800px
+            height: unset
+
+        h1
+            font-size: 30px
+            margin: 0
+
+        &-fixed
+            display: none
+
+        &__man
+            right: -20%
+            bottom: -124px
+            display: block
+            max-height: 60%
+
+        .btn
+            bottom: 20px
+            &-play
+                right: 40%
+                bottom: 22%
+
+        &-content
+            padding: 0
+
+    .business
+        background-position: center bottom -10px, bottom -800px left -850px
+        padding: 60px 0 160px
+        &-item
+            margin-bottom: 85px
+            &__img
+                margin: 0 auto 50px
+                display: block
+
+            &__num
+                font-size: 54px
+                line-height: 100%
+
+    .partners
+        padding: 60px 0
+        .heading
+            margin-bottom: 50px
+        .container
+            padding: 0
+        .wrap
+            overflow-x: scroll
+            flex-wrap: nowrap
+            justify-content: flex-start
+            padding: 0 10px
+        &-item
+            min-width: 270px
+            max-width: unset
+            margin: 0 10px
