--- a/sass/_elements.sass
+++ b/sass/_elements.sass
@@ -143,7 +143,7 @@ section
             left: -5px
             top: -5px
 
-.wrapper, .slider, .wrap, .wrap-strech, .wrap-start, .box-wrap
+.wrapper, .wrap, .wrap-strech, .wrap-start, .box-wrap
     display: flex
     justify-content: space-between
     align-items: center
