--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -18,6 +18,8 @@
             text-transform: uppercase
             display: inline-block
             padding: 40px 15px
+            &:hover 
+                color: #0cc
 
     &__wa
         width: 41px
