--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2,7 +2,8 @@
 @import 'elements'
 @import 'header'
 @import 'footer'
-// @import 'anim'
+@import 'anim'
+@import 'logo-anim'
 @import 'slick'
 @import 'modal'
 
@@ -119,7 +120,7 @@
     background-color: #161D25
     background-image: url('../img/rip.svg'), url('../img/map.svg')
     background-repeat: no-repeat
-    background-position: center bottom -10px, bottom -400px left -380px
+    background-position: center bottom -80px, bottom -400px left -380px
     background-size: 100vw auto, 800px auto
     position: relative
     z-index: 1
@@ -189,13 +190,136 @@
             font-size: 16px
             line-height: 150%
 
+.catalog
+    overflow: hidden
+    padding: 120px 0 200px
+    background-color: #161D25
+    background-image: url('../img/rip.svg'), url('../img/bg.jpg')
+    background-repeat: no-repeat
+    background-position: center top -60px, center center
+    background-size: 100vw auto, cover
+    position: relative
+    .heading
+        margin-bottom: 10px
+        font-weight: normal
+    .textline
+        // font-size: 24px
+        font-weight: 400
+        margin-bottom: 150px
+
+    &-item
+        display: flex
+        max-width: 305px
+        margin: 0 0 80px
+        &:last-of-type
+            margin-bottom: 0
+        img
+            width: 45px
+            height: 43px
+            object-fit: contain
+            margin: 0 27px 0 0
+
+        p
+            font-weight: 400
+            font-size: 16px
+            line-height: 20px
+
+    form
+        width: 100%
+        max-width: 470px
+        margin: 0 auto 0 190px
+        input
+            max-width: 95%
+            display: block
+            margin: 0 auto 40px
+        .btn
+            width: 98%
+
+    &__img
+        max-width: 50%
+        max-height: 110%
+        position: absolute
+        right: -18%
+        top: 12%
+
+.discuss
+    padding: 0
+    background-color: #161D25
+    background-image: url('../img/bg-2.jpg')
+    background-repeat: no-repeat
+    background-position: center center
+    background-size: cover
+    .container
+        padding: 120px 0 200px
+    &-title
+        max-width: 490px
+    .headline
+        font-weight: 400
+        text-align: left
+        margin-bottom: 65px
+    .textline
+        max-width: 370px
+        font-weight: 400
+        text-align: left
+        margin-bottom: 45px
+        font-size: 16px
+        line-height: 130%
+    .wrap
+        align-items: center
+        flex-wrap: nowrap
+
+    &__img
+        max-width: 40%
+        max-height: 90%
+        position: absolute
+        left: 50%
+        bottom: 0
+        z-index: -1
+        transform: translateX(-50%)
+
+    form
+        width: 100%
+        max-width: 370px
+        margin: 0 0 0 auto
+        h4
+            font-weight: 700
+            font-size: 24px
+            line-height: 29px
+            margin-bottom: 20px
+        p
+            font-weight: 400
+            font-size: 14px
+            line-height: 17px
+            margin-bottom: 40px
+        input
+            max-width: 95%
+            display: block
+            margin: 0 auto 40px
+        .btn
+            width: 98%
+
 .scheme
     background-color: #fff
     color: #000
     padding: 0
-    background-image: url('../img/compass.svg')
-    background-repeat: no-repeat
-    background-position: top 0px right 80px
+    &-compass
+        position: absolute
+        top: 80px
+        right: 40px
+        z-index: 11
+        width: 180px
+        height: 180px
+        img
+            position: absolute
+            top: 0
+            left: 0
+            width: 100%
+            height: 100%
+            object-fit: contain
+            transform-origin: 50% 52%
+        &__inner
+            animation: rotateCompass 4s ease-in-out infinite alternate-reverse
+
     .container
         padding: 150px 0 230px
 
@@ -208,6 +332,8 @@
 
     .heading
         font-weight: 400
+        text-align: left
+
     p
         max-width: 400px
         font-weight: 400
@@ -243,9 +369,9 @@
     .headline
         color: #000
         margin-bottom: 120px
-    
+
     &-slide
-        background-color: #696969
+        background-color: #161D25
         max-width: 1570px
         height: 660px
         border-radius: 50px
@@ -254,7 +380,7 @@
         display: flex !important
         justify-content: center
         flex-direction: column
-        
+
         position: relative
         z-index: 1
 
@@ -273,12 +399,18 @@
         z-index: -1
         object-fit: cover
 
-    &__item 
+    &__item
         max-width: 45%
         margin: 0 0 50px
 
-    .wrap-start 
+    .wrap-start
         flex-wrap: wrap
+
+@keyframes rotateCompass
+    0%
+        transform: rotate(0deg)
+    100%
+        transform: rotate(360deg)
 
 @media screen and ( max-width: 1600px )
     .main
@@ -318,10 +450,11 @@
 
     .business
         padding: 90px 0 160px
-        background-position: center bottom -10px, bottom -400px left -450px
+        background-position: center bottom -40px, bottom -400px left -450px
 
         .textline
             margin-bottom: 70px
+
         &-item
             &__img
                 margin-bottom: 60px
@@ -333,6 +466,31 @@
 
             .btn
                 right: -10%
+
+    .catalog
+        .wrap
+            justify-content: flex-start
+        form
+            max-width: 370px
+            margin: 0 0 0 8%
+
+    .slider
+        padding: 80px 0
+        .headline
+            margin-bottom: 40px
+        &-slide
+            padding: 40px 180px 40px 300px
+            height: 480px
+            max-width: 1100px
+        &__heading
+            font-weight: 400
+            font-size: 24px
+            line-height: 129%
+            margin-bottom: 50px
+
+        &__item
+            font-size: 14px
+            margin-bottom: 30px
 
 @media screen and ( max-width: 1200px )
     .main
@@ -406,6 +564,86 @@
             max-width: unset
             margin-bottom: 50px
 
+    .catalog
+        padding: 100px 0
+        .textline
+            margin: 0 auto 50px
+
+        &-item
+            margin-bottom: 50px
+
+        &__img
+            position: relative
+            top: auto
+            right: -10%
+            max-width: 110%
+            max-height: unset
+            margin: 0 auto 50px
+            display: block
+
+        .wrap
+            display: block
+
+        &-col
+            max-width: 370px
+            margin: 0 auto 40px
+
+        form
+            margin: 0 auto
+            input
+                margin-bottom: 30px
+
+    .slider
+        &-slide
+            width: 100vw
+            height: 800px
+            border-radius: 0
+            padding: 40px 22px 90px
+
+        &__img
+            opacity: .8
+
+        .wrap-start
+            display: block
+
+        &__item
+            width: 100%
+            max-width: 100%
+            display: block
+            margin-bottom: 40px
+            &:last-of-type
+                margin-bottom: 0
+
+    .discuss
+        overflow: hidden
+        .wrap
+            display: block
+            padding: 80px 15px 0
+
+        .headline
+            margin-bottom: 40px
+
+        .textline
+            margin-bottom: 30px
+
+        &-title
+            max-width: 100%
+            margin-bottom: 60px
+        form
+            max-width: 300px
+            margin: 0 auto
+            input
+                margin-bottom: 30px
+
+        &__img
+            display: block
+            width: 100%
+            max-height: unset
+            max-width: 600px
+            position: static
+            transform: translateX(50px)
+            margin: 80px auto 0
+
 @media screen and ( max-width: 700px )
     .main
         .container
@@ -436,7 +674,7 @@
             padding: 0
 
     .business
-        background-position: center bottom -10px, bottom -800px left -850px
+        background-position: center bottom -66px,bottom -800px left -850px
         padding: 60px 0 160px
         &-item
             margin-bottom: 85px
@@ -463,3 +701,12 @@
             min-width: 270px
             max-width: unset
             margin: 0 10px
+
+    .scheme
+        .heading 
+            max-width: 85%
+        &-compass
+            width: 100px
+            height: 100px
+            top: 0
+            right: 20px
