--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2,8 +2,7 @@
 @import 'elements'
 @import 'header'
 @import 'footer'
-@import 'anim'
-@import 'logo-anim'
+// @import 'anim'
 @import 'slick'
 @import 'modal'
 
@@ -405,12 +404,6 @@
 
     .wrap-start
         flex-wrap: wrap
-
-@keyframes rotateCompass
-    0%
-        transform: rotate(0deg)
-    100%
-        transform: rotate(360deg)
 
 @media screen and ( max-width: 1600px )
     .main
