--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2,7 +2,8 @@
 @import 'elements'
 @import 'header'
 @import 'footer'
-// @import 'anim'
+@import 'anim'
+@import 'logo-anim'
 @import 'slick'
 @import 'modal'
 
